1998-08-20  Per Bothner  <bothner@cygnus.com>

	Handle new'ing of Java classes.
	* init.c (build_class_classref):  New function.
	(build_new_1):  If type is TYPE_FOR_JAVA:  Call _Jv_AllocObject;
	constructor does not return this;  don't need to exception-protect.

	* pt.c (lookup_template_class):  Copy TYPE_FOR_JAVA flag.
	* decl2.c (acceptable_java_type):  Handle template-derived types.

1998-08-20  Per Bothner  <bothner@cygnus.com>

	* decl2.c (import_export_vtable):  Suppress vtables for Java classes.

1998-08-20  Mark Mitchell  <mark@markmitchell.com>

	* decl.c (duplicate_decls): Always merge the old and new patterns
	for templates, regardless of whether or not the new one has
	DECL_INITIAL.  Don't throw away specializations.  Merge
	DECL_SAVED_TREE.
	* pt.c (tsubst_decl): Use the right pattern when calculating the
	complete args for a new template instance.
	(do_decl_instantiation): Fix typo in comment.
	(regenerate_decl_from_template): Deal with tricky friend template
	case.
	(instantiate_decl): Likewise.
	
Thu Aug 20 09:09:45 1998  Jeffrey A Law  (law@cygnus.com)

	* init.c (build_builtin_delete_call): Add missing assemble_external
	call.

1998-08-20  Jason Merrill  <jason@yorick.cygnus.com>

	* parse.y (notype_unqualified_id): Also accept ~A<int>.

1998-08-19  Mark Mitchell  <mark@markmitchell.com>

	* typeck.c (build_binary_op_nodefault): Warn on use of NULL in
	arithmetic.
	* except.c (build_throw): Warn when NULL is thrown, even with
	-ansi.  Use ansi_null_node, rather than integer_zero_node, in the
	thrown expression.
	
	* cp-tree.h (ansi_null_node): New variable.
	* decl.c (ansi_null_node): New variable.
	(init_decl_processing): Initialize its type.
	* lex.c (init_parse): Initialize its value.  Use ansi_null_node
	for null_node in non-ANSI mode.
	* typeck.c (build_binary_op_nodefault): Use ansi_null_node in
	place of null_node to avoid spurious errors.

1998-08-17  Mark Mitchell  <mark@markmitchell.com>

	* cp-tree.h (enter_scope_of): New function.